--- a/src/Makefile
+++ b/src/Makefile
@@ -8,8 +8,9 @@ top_srcdir = ..
 
 include $(top_srcdir)/CONFIGVARS
 
-LIBHYP = libhyp.a
-VERSION= 0.5.0
+LIBHYP  = libhyp.a
+VERSION = `cat $(top_srcdir)/src/.makeversion`
+
 
 TARGETDIR = $(top_srcdir)/lib
 TARGET = $(TARGETDIR)/$(LIBHYP)
@@ -21,7 +22,7 @@ all: $(TARGET)
 
 #STDLIB_CFLAGS = $(M68K_ATARI_MINT_CFLAGS)
 
-CFLAGS  = -I$(INCDIR) $(STDLIB_CFLAGS)
+CFLAGS += -I$(INCDIR) $(STDLIB_CFLAGS)
 
 CSRC = \
 	decodlh5.c \
@@ -39,7 +40,14 @@ $(TARGET): $(OBJECTS) $(TARGETDIR)
 $(TARGETDIR):
 	mkdir -p $(TARGETDIR)
 
-dist:
+.makeversion: $(INCDIR)/libhyp.h
+	echo -e '#include <libhyp.h>\n MAKE_LIBHYP_VERSION __LIBHYP_VERSION_MAJOR__ . __LIBHYP_VERSION_MINOR__ . __LIBHYP_VERSION_REVISION__' | $(CC) $(CFLAGS) -E - | grep MAKE_LIBHYP_VERSION | sed -e "s/MAKE_LIBHYP_VERSION //g" | sed -e "s/ //g" > $@
+
+
+dist:	.makeversion
+	@make dist-ver
+
+dist-copy:
 	mkdir -p $(DISTDIR)/include
 	cp $(top_srcdir)/include/libhyp.h $(DISTDIR)/include
 	mkdir -p $(DISTDIR)/src
@@ -48,6 +56,10 @@ dist:
 	cp $(top_srcdir)/src/*.h $(DISTDIR)/src
 	cp $(top_srcdir)/CONFIGVARS $(DISTDIR)
 	cp $(top_srcdir)/COPYRIGHT $(DISTDIR)
+
+dist-ver: dist-copy
+	tar czf $(DISTDIR)/../libhyp-$(VERSION).tar.gz $(DISTDIR)
+
 
 strip:
 	$(STRIP) --strip-all $(TARGET)
