feat(dehyp.js): use 'emmake make' to build
Usage:

```sh
  # prints the node 2 to stdout normally
  node ./dehyp.js /root/ataripf.hyp 2

  # writes ./xxx.png as a result of dehyp image node
  node ./dehyp.js /root/ataripf.hyp 50
```

--- a/src/Makefile
+++ b/src/Makefile
@@ -33,7 +33,7 @@ OBJECTS = $(CSRC:.c=.o)
 hypobj.o: $(INCDIR)/libhyp.h hypobj.h
 
 $(TARGET): $(OBJECTS) $(TARGETDIR)
-	$(AR) cr $@ $(OBJECTS); $(RANLIB) $@
+	$(AR) rcs $@ $(OBJECTS)
 
 $(TARGETDIR):
 	mkdir -p $(TARGETDIR)
